--- a/city-listing/footer.html
+++ b/city-listing/footer.html
@@ -13,12 +13,12 @@
         <!--  <a href="#" class="fa fa-pinterest"></a> -->
       </div>
       <div class="footer-col footer-links">
-        <a href="#">Home</a>
+        <a href="index.html">Home</a>
         <a href="#">About</a>
         <!--     <a href="#" class="sign-in">Sign In</a>  
           <a href="#">Pricing</a>  
         <a href="#">Blog</a> -->
-        <a href="#">Contact</a>
+        <a href="contact.html">Contact</a>
       </div>
       <div class="footer-col footer-contact">
         <div class="footer-address">
