--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="">
-  <title>Comunity Hope</title>
+  <title>Comunity Hope - Demo</title>
   <!-- Google Font(s) -->
   <link href="https://fonts.googleapis.com/css?family=Capriola|Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
