--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="categories">
               <a class="icon-platter child" href="resturant.html">Restaurant</a>
               <a class="icon-teacup child" href="coffee.html">Café</a>
-              <a class="icon-spotlights" href="activites.html">Activities</a>
+              <a class="icon-spotlights" href="https://www.yallatour.com/en/home">Activities</a>
               <a class="icon-presentation" href="Cinema.html">Cinema</a>
               <a class="icon-home" href="hotel.html">Hotel</a>
               <a class="icon-car child" href="#">Car Dealer</a>
@@ -137,7 +137,7 @@
           <div class="cat-image" style="background-image:url('assets/images/categories/act.jpg')"></div>
           <div class="cat-icon icon-spotlights"></div>
           <div class="cat-counter">3</div>
-          <a href="activites.html">
+          <a href="https://www.yallatour.com/en/home">
             <div class="cat-text">Activities</div>
           </a>
         </div>
